update styles, adding readme

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1263,6 +1263,30 @@
           "imported": false,
           "parents": [],
           "type": "markdown"
+        },
+        "aa5fd7cb": {
+          "id": "aa5fd7cb",
+          "path": "README.html",
+          "output": "README.html",
+          "name": "README.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "68df3104": {
+          "id": "68df3104",
+          "path": "img/thumbnail.png",
+          "output": "img/thumbnail.png",
+          "name": "thumbnail.png",
+          "category": "IMAGE",
+          "size": 60190,
+          "type": "png",
+          "initialSize": 60190,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
